# sms4django

./: .coveragerc  .repo-metadata.json  MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg
requirements/: requirements-codestyle.txt  requirements-documentation.txt  requirements-optionals.txt  requirements-packaging.txt
twilliosms/: admin.py  apps.py  signals.py
twilliosms/models/: __init__.py  model.py  twillionumber.py  twilliosettings.py  twilliosms.py
