[metadata]
name = sms4django
version = 1.2.4
description = Django app to send SMS using Twillio API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lauro-cesar/sms4django
project_urls =
    SmS4Django documentation = https://sms4django.readthedocs.io/en/latest/
    SmS4Django source = https://github.com/lauro-cesar/sms4django

author = Lauro Cesar
author_email = lauro@hostcert.com.br
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
python_requires = >=3.6

install_requires=
    twilio

include_package_data = true
packages = find:
